# hackaton-rust

./: Cargo.toml  Dockerfile  Readm.md
src/: Cargo.toml  lib.rs  main.rs
src/controllers/: api_hack.rs  health.rs
src/models/: response.rs
src/services/: api_hack.rs  mod.rs
