[package]
name = "hackaton-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.38"
hyper = "0.14"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.69"
cached = "0.26.2"